# rk9students

./: README.md
code/src/: CMakeLists.txt
code/src/boolean_poly/: CMakeLists.txt  Edge.cpp  Edge.h  Intersection.cpp  Intersection.h  Operation.cpp  Operation.h  Polygon.cpp  Polygon.h  TrianglesBuilder.cpp  TrianglesBuilder.h  main.cpp
code/src/common/: CMakeLists.txt
code/src/common/include/common/: Point.h  PolyModel.h
code/src/common/src/: Point.cpp  PolyModel.cpp  Triangle.cpp
code/src/lattice/: LookUpTable.h  MarchingCubes.cpp  MarchingCubes.h  UnitCell.h  fparser.cpp  fparser.h  main.cpp
code/src/stl_errors/: CMakeLists.txt  Edge.cpp  Edge.h  ModelEdges.cpp  ModelEdges.h  main.cpp
code/src/stl_errors/test_models/: sphere_2_holes.stl  sphere_5_holes.stl
code/src/stl_errors/test_models/residentTGT/: result1.stl  result_intersect_11ball_12ball.stl  result_intersect_spine_vint.stl  result_sub_11ball_12ball.stl  result_substract_11_ball_12_ball.stl  sphere.stl
code/src/tomo_mesh/KirillsProject/source/: CMakeLists.txt  PixelsProcessing.cpp
code/src/webapp/MedCad/MedCad/: Program.cs  Startup.cs  project.json
doc/Antipova/: TZ.md
doc/Kaziakhmedov/: RPZ.doc
doc/Kobzar/: Report.md
doc/Kobzar/RPZ/: RPZ_Kobzar.md
doc/Romanov/: RPZ_ROMANOV.md
doc/Romanov/TestingModels/: 31(cube).stl  32(cube).stl  Vint2.stl  add conus+ball.stl  add cube31+cube32.stl  ball.stl  cone.stl  int conus+ball.stl  int cube31+cube32.stl  polygons.stl  result1.stl  sub ball+conus.stl  sub cone+ball.stl  sub conus+ball.stl  sub cube31+cube32.stl
doc/Tilichenko/: RPZ.doc
(+28 files in other folders)
